--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # generated from manifests external_dependencies
-azure-identity
-azure-storage-blob
-prometheus_client
-python-json-logger
-redis
+azure-storage-blob==12.22.0
+azure-identity==1.17.1
+prometheus_client==0.20.0
+python-json-logger==2.0.7
+redis==5.0.8
