[MIG] attachment_s3: Migration to 18.0

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
 # generated from manifests external_dependencies
-azure-identity
-azure-storage-blob
-prometheus_client
-python-json-logger
+boto3
 redis
